# GenieSolutions_test

./: README.md
cpp_test/: .gitignore  CMakeLists.txt  README.md  back_to_start.t  cmake_vars.log.cmake  main.cpp  place_move_turn.t  place_only.t  robot.cpp  robot.h  util.cpp  util.h
cpp_test/include/: robot.h  util.h
cpp_test/src/: main.cpp  robot.cpp  util.cpp
cpp_test/test/: no_commands.t  place_and_move.t  robot_test.cpp  util_test.cpp
golang/test/: test2.go  test3.go  test4.go
